style: reduce padding-top of painboard section on mobile and tablet to fix spacing below the banner

--- a/css/styles.css
+++ b/css/styles.css
@@ -1561,6 +1561,10 @@ ol {
     max-width: var(--content-width);
   }
 
+  .section-painboard__content {
+    padding-top: 60px;
+  }
+
   .section-banner {
     width: 100%;
   }
@@ -1730,6 +1734,7 @@ ol {
 
   .section-painboard__content {
     width: 90%;
+    padding-top: 40px;
   }
 
   .section-painboard__title {
